# dgpulldown

./: .gitignore  README.md
dgpulldown1/dgpulldown_mac_gui/: DGPdelegate.h  main.m
dgpulldown1/dgpulldown_mac_gui/DGPulldown.xcodeproj/: arivera1271.mode1v3  riveraa.perspectivev3
dgpulldown1/dgpulldown_windows/: resource.h
dgpulldown1/dgpulldown_windows_vs2015/: ReadMe.txt  dgpulldown.sln  dgpulldown.vcxproj.filters
dgpulldown1/dgpulldown_windows_vs2015_cmdonly/: dgpulldown_cmdonly.sln
dgpulldown1/dgpulldown_windows_vs2017/: dgpulldown.sln
dgpulldown1/dgpulldown_windows_vs2017_cmdonly/: dgpulldown_cmdonly.rc
dgpulldown2/dgpulldown2_cmd/: CMakeLists.txt
dgpulldown2/dgpulldown2_cmd/cmake/: compiler_flags.cmake
dgpulldown2/dgpulldown2_cmd/src/: argparse.c  dgpulldown.c  dgpulldown2.c  dgpulldown2_version.c.in  dgpulldown2_version.h  dgpulldown_version.h
dgpulldown2/dgpulldown_cmake/: CMakeLists.txt
dgpulldown2/dgpulldown_cmake/cmake/: GetGitRevisionDescription.cmake
dgpulldown2/dgpulldown_cmake/src/: getMemorySize.c
dgpulldown2_python/: README.md  dgpulldown2.py
dgpulldown_cmake/: CMakeLists.txt
dgpulldown_cmake/src/: av_log.c  av_log.h  dgpulldown.c  dgpulldown_version.c.in  getMemorySize.c
dgpulldown_linux/: README  README.md  README_MAC  dgpulldown.c  mac.patch  makefile
dgpulldown_linux/orig/: .DGPulldown.c.swp  DGPulldown.dsp  DGPulldown.dsw  DGPulldown.rc  GOPNote.txt
dgpulldown_mac_gui/: Credits.html  DGPdelegate.m  DGPulldown_Prefix.pch  Info.plist  License.html  License.rtf  README.md  Readme.rtf  movie.icns
dgpulldown_mac_gui/DGPulldown.xcodeproj/: arivera1271.pbxuser  project.pbxproj  riveraa.pbxuser
dgpulldown_mac_gui/English.lproj/: MainMenu.xib
dgpulldown_mac_gui/Help.rtfd/: TXT.rtf
dgpulldown_python/: README.md  dgpulldown.py
dgpulldown_windows/: DGPulldown.c  README.md
dgpulldown_windows_vs2015/: DGPulldown.c  README.md  dgpulldown.vcxproj  dgpulldown.vcxproj.filters
dgpulldown_windows_vs2015_cmdonly/: DGPulldown.c  dgpulldown_cmdonly.vcxproj  dgpulldown_cmdonly.vcxproj.filters  resource.h
dgpulldown_windows_vs2017/: DGPulldown.txt  README.md  dgpulldown.rc  dgpulldown.vcxproj
dgpulldown_windows_vs2017_cmdonly/: README.md  dgpulldown_cmdonly.sln  dgpulldown_cmdonly.vcxproj  dgpulldown_cmdonly.vcxproj.filters
dgpulldown_windows_vs2019/: README.md  dgpulldown.sln  dgpulldown.vcxproj
dgpulldown_windows_vs2019_cmdonly/: DGPulldown.c  README.md  ReadMe.txt  dgpulldown_cmdonly.sln  dgpulldown_cmdonly.vcxproj
